--- a/Home/templates/index.html
+++ b/Home/templates/index.html
@@ -7,8 +7,8 @@
   <title>صفحه اصلی</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+  <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+  <script src="{% static 'js/bootstrap.bundle.js' %}"></script>
   <link rel="stylesheet" href="{% static 'fonts/vazir/font.css' %}">
   <style>
 
@@ -29,13 +29,21 @@
   #xauusd{
     direction:rtl;
   }
-  
+  #xagusd{
+    direction:rtl;
+  }
+  .bg-custom{
+    background:url({% static 'img/top_1.jpg' %});
+  }
+  body{
+    background: linear-gradient(90deg, rgba(8,0,255,0.1825105042016807) 0%, rgba(190,0,195,0.3169642857142857) 100%)
+  }
   </style>
 </head>
 <body>
 
-<div class="p-5 bg-primary text-white text-center shadow" style="background: #198754 !important;">
-  <h1>پیشبینی بازار فارکس</h1>
+<div class="p-5 bg-custom text-white text-center shadow">
+  <h1 style="text-shadow: 0 0 3px black;">پیشبینی بازار فارکس</h1>
 </div>
 <br>
 <div class="m-5">
